Globally fix IE7 layout issue

--- a/public/stylesheets/sass/_globals.sass
+++ b/public/stylesheets/sass/_globals.sass
@@ -1,3 +1,6 @@
+*
+  zoom: 1
+
 html, body
   margin: 0
   padding: 0
